--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -107,7 +107,7 @@
         }
 
          :host[validating] #uploadButton:hover {
-            background-color: #888 !important;
+            background-color: #ddd !important;
         }
 
         #footer {
