--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../../polymer/polymer.html">
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../iron-resizable-behavior/iron-resizable-behavior.html">
 <script src="../../../file-saver.js/FileSaver.js"></script>
 
 <dom-module id="stv-table">
@@ -463,6 +464,9 @@
     <script>
         Polymer({
             is: 'stv-table',
+            behaviors: [
+                Polymer.IronResizableBehavior
+            ],
             properties: {
                 columns: {
                     type: Array,
@@ -612,6 +616,19 @@
             listeners: {
                 'wheel': 'handleScroll',
                 'mouseleave': 'handleColumnsMenuLeave',
+                'iron-resize': '_onIronResize'
+            },
+            _onIronResize: function() {
+                this._setPageSizeAuto();
+            },
+            _setPageSizeAuto: function() {
+                this.async(function() {
+                    var listHeight = this.$.list.getBoundingClientRect().height;
+                    if (listHeight != 0) {
+                        var n = listHeight / 30;
+                        this.set('pageSize', parseInt(Math.floor(n)))
+                    }
+                }, 150);
             },
             ready: function() {
 
@@ -653,6 +670,22 @@
                     }
                     return dataLine;
                 }
+                this.async(function() {
+                    this._setPageSizeAuto();
+                    var hiddenParent = Utils.closest(this, "[hidden]");
+                    if (hiddenParent != null) {
+                        var observer = new MutationObserver(function(mutations) {
+                            mutations.forEach(function(mutation) {
+                                if (mutation.type == 'attributes' && mutation.attributeName == 'hidden') {
+                                    me._setPageSizeAuto();
+                                }
+                            });
+                        });
+                        observer.observe(hiddenParent, {
+                            attributes: true
+                        });
+                    }
+                }, 10);
             },
             isColumnVisible: function(v) {
                 return v.visible !== false;
@@ -850,7 +883,7 @@
             },
             checkRemote: function() {
                 var me = this;
-                if (this.enableLoading) {
+                if (this.enableLoading && this.currentPage == 1) {
                     this.setLoading(true);
                 }
                 if (this.enableRemote) {
