--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -631,6 +631,7 @@
                 }, 150);
             },
             ready: function() {
+                var me = this;
 
                 this.exportParsers.separator = "\t";
                 this.exportParsers.comment = "#";
