--- a/src/stv-form-box.html
+++ b/src/stv-form-box.html
@@ -17,8 +17,7 @@
         #header {
             padding: 5px 10px;
             font-size: 15px;
-            background-color: var(--light-secondary-color);
-            /*background-color: #e2e9e9;*/
+            background-color: var(--light-button-color);
             color: var(--secondary-text-color);
             cursor: pointer;
         }
@@ -26,7 +25,6 @@
         #header:hover {
             font-weight: bold;
             color: var(--dark-button-color);
-            /*color: #8ba7a7;*/
         }
 
         #container {
@@ -47,7 +45,6 @@
         .collapsible >i:hover {
             font-weight: bold;
             color: var(--dark-button-color);
-            /*color: #8ba7a7;*/
         }
     </style>
     <template>
