--- a/src/stv-form-box.html
+++ b/src/stv-form-box.html
@@ -17,7 +17,7 @@
         #header {
             padding: 5px 10px;
             font-size: 15px;
-            background-color: var(--light-button-color);
+            background-color: var(--light-secondary-color);
             color: var(--secondary-text-color);
             cursor: pointer;
         }
