--- a/src/stv-form-box.html
+++ b/src/stv-form-box.html
@@ -6,6 +6,7 @@
             display: inline-block;
             position: relative;
             box-sizing: border-box;
+            width: 100%;
         }
 
         #form {
