Added new components

--- a/src/stv-tooltip.html
+++ b/src/stv-tooltip.html
@@ -1,5 +1,5 @@
 <link rel="import" href="../../polymer/polymer.html">
-<dom-module id="stv-tooltip">
+<dom-module id="stv-tooltip" is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
     <style>
         :host {
             display: inline-block;
