--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -1,10 +1,10 @@
 <link rel="import" href="../../../polymer/polymer.html">
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
-<script src="../../../file-saver.js/FileSaver.js"></script>
+<script src="../../../FileSaver.js/FileSaver.min.js"></script>
 
 <dom-module id="stv-table">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             display: block;
             position: relative;
             font-size: 13px;
@@ -24,7 +24,7 @@
             z-index: 1;
         }
 
-        :host[enable-paging] .scrollfix {
+         :host[enable-paging] .scrollfix {
             display: none;
         }
 
@@ -62,7 +62,7 @@
             background-color: inherit;
         }
 
-        :host[enable-paging] .table-header-row {
+         :host[enable-paging] .table-header-row {
             overflow-y: hidden;
         }
 
@@ -123,7 +123,7 @@
             background-color: inherit;
         }
 
-        :host[enable-paging] #filterRow {
+         :host[enable-paging] #filterRow {
             overflow-y: hidden;
         }
 
@@ -153,15 +153,15 @@
             background-color: #fafafa;
         }
 
-        :host>.table-body {
+         :host>.table-body {
             overflow-y: scroll;
         }
 
-        :host[enable-paging]>.table-body {
+         :host[enable-paging]>.table-body {
             overflow-y: hidden;
         }
 
-        :host[enable-filter]>.table-body {
+         :host[enable-filter]>.table-body {
             height: calc(100% - 88px);
         }
 
@@ -296,8 +296,8 @@
             margin-right: 15px;
         }
 
-        :host[enable-paging] .table-filter-field:last-child>.select,
-        :host[enable-paging] .table-filter-field:last-child>input[type=text] {
+         :host[enable-paging] .table-filter-field:last-child>.select,
+         :host[enable-paging] .table-filter-field:last-child>input[type=text] {
             margin-right: 1px;
         }
 
