--- a/src/stv-button-tooltip.html
+++ b/src/stv-button-tooltip.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-button-tooltip">
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             cursor: pointer;
         }
