--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -208,17 +208,17 @@
         </iron-list>
 
         <div id="footer" class="counts horizontal layout center">
-            <div class="jso-btn jso-btn-shdw but" on-click="handleView" data-value="error" data-checked$="{{computeView(view, 'error')}}">
+            <div class="stv-btn stv-btn-shdw but" on-click="handleView" data-value="error" data-checked$="{{computeView(view, 'error')}}">
                 <div class="error-count count">Errors:
                     <span>{{errorCount}}</span>
                 </div>
             </div>
-            <div class="jso-btn jso-btn-shdw but" on-click="handleView" data-value="warning" data-checked$="{{computeView(view, 'warning')}}">
+            <div class="stv-btn stv-btn-shdw but" on-click="handleView" data-value="warning" data-checked$="{{computeView(view, 'warning')}}">
                 <div class="warning-count count">Warning:
                     <span>{{warningCount}}</span>
                 </div>
             </div>
-            <div class="jso-btn jso-btn-shdw but" on-click="handleView" data-value="info" data-checked$="{{computeView(view, 'info')}}">
+            <div class="stv-btn stv-btn-shdw but" on-click="handleView" data-value="info" data-checked$="{{computeView(view, 'info')}}">
                 <div class="info-count count">Info:
                     <span>{{infoCount}}</span>
                 </div>
