--- a/src/stv-import-file.html
+++ b/src/stv-import-file.html
@@ -60,7 +60,7 @@
             </div>
             <div class="horizontal layout" style="line-height: 22px;margin-top: 5px;">
                 <label class="stv">Selected file name: &nbsp;</label>
-                <div class="filename">{{fileName}}</div>
+                <div class="filename flex">{{fileName}}</div>
                 <div id="recheckButton" class="jso-btn jso-btn-shdw" style="height:24px;" on-click="handleRecheck">
                     Revalidate
                 </div>
