--- a/src/ontology/stv-go.html
+++ b/src/ontology/stv-go.html
@@ -1,3 +1,5 @@
+<link rel="import" href="stv-ontology-tree.html">
+<link rel="import" href="stv-ontology-tree-item.html">
 <dom-module id="stv-go">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
