--- a/src/ontology/stv-hpo.html
+++ b/src/ontology/stv-hpo.html
@@ -1,3 +1,6 @@
+<link rel="import" href="stv-ontology-tree.html">
+<link rel="import" href="stv-ontology-tree-item.html">
+
 <dom-module id="stv-hpo">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
