--- a/src/ontology/stv-go.html
+++ b/src/ontology/stv-go.html
@@ -183,6 +183,12 @@
                     value: function() {
                         return {};
                     }
+                },
+                mapSelectedGo: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
                 }
             },
             ready: function() {
@@ -230,20 +236,27 @@
             handleAddGO: function(e) {
                 for (var i = 0; i < this.$.allGO.selected.length; i++) {
                     var go = this.$.allGO.selected[i];
-                    this.push('selectedGO', go);
+                    if (this.mapSelectedGo[go.id] == null) {
+                        this.mapSelectedGo[go.id] = go;
+                        this.push('selectedGO', go);
+                    }
                 }
             },
             handleClearSelected: function(e) {
                 this.selectedGO = [];
+                this.mapSelectedGo = {};
             },
             handleAddSelected: function(e) {
                 var gos = [];
                 this.goValue = [];
                 var els = this.$.treeGO.querySelectorAll('stv-ontology-tree-item[selected]');
                 if (els.length > 0) {
-                    for (var i = 0; i < els.length; i++) {
-                        gos.push(els[i].file);
-                    }
+                  for (var i = 0; i < els.length; i++) {
+                      if (this.mapSelectedGo[els[i].file.id] == null) {
+                          this.mapSelectedGo[els[i].file.id] = els[i].file;
+                          gos.push(els[i].file);
+                      }
+                  }
                     this.set('goValue', gos);
                 } else {
                     this.set('goValue', this.selectedGO);
