--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -363,6 +363,7 @@
             this.set('folders', []);
             this.set('files', []);
             this.set('loading', false);
+            this._setInitialSelection();
             // this.set('contentData', '');
         },
         reset: function() {
